--- a/app/hauna/page.module.css
+++ b/app/hauna/page.module.css
@@ -25,6 +25,21 @@
     font-weight: 500;
 }
 
+.footer {
+    width: 100%;
+    padding: 1.5rem 6rem;
+    display: grid;
+    place-items: center;
+    background-color: var(--light);
+}
+
+.footer p {
+    color: var(--primary);
+    font-weight: 700;
+    margin-top: 1rem;
+    font-size: 1.8rem;
+}
+
 @media (max-width: 640px) {
     .stats {
         padding: 2rem 3rem;
