--- a/app/products/page.module.css
+++ b/app/products/page.module.css
@@ -52,7 +52,7 @@
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     text-align: center;
 }
 
@@ -84,7 +84,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
 }
 
 .modal_content {
@@ -98,6 +98,8 @@
     width: 90%;
     max-width: 50rem;
     text-align: center;
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
 .modal_content img {
