--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -58,6 +58,7 @@
     border-radius: 0.5rem;
     outline: none;
     font-size: 1.4rem;
+    font-weight: bold;
     transition: border-color 0.3s ease;
     resize: none;
 }
