changed to 3 seconds

--- a/app/ui/carousel/carousel.module.css
+++ b/app/ui/carousel/carousel.module.css
@@ -12,7 +12,7 @@
 
 .carouselContainer {
     width: 90%;
-    margin: 0 auto 3rem auto;
+    margin: 3rem auto 3rem auto;
     position: relative;
     overflow: hidden;
     aspect-ratio: 16/9;
